tests/toy/neg/000264_mutation.toylang
program a = { do a do sleep; } .
